--- a/Flask/static/style.css
+++ b/Flask/static/style.css
@@ -66,7 +66,7 @@ textarea{
     padding: 8px;
 }
 
-input[type="submit"] {
+input[type="submit"], #record, #stopRecord {
   background-color: #4caf50; /* Green */
   border: none;
   color: white;
@@ -77,6 +77,10 @@ input[type="submit"] {
   font-size: 16px;
 
   cursor: pointer;
+}
+
+#stopRecord:disabled {
+    background-color: grey;
 }
 
 
