--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -12,7 +12,7 @@
       <div class="title"><h4>AI-Powered Note Maker</h4></div>
     <div class="input">
       <div class="audioinput">
-        <p>Summarize from class recording:</p>
+        <p>Summarize from recording:</p>
         <form action="/summarize" method="POST" enctype="multipart/form-data">
           <input type="file" name="audioFile" id="audioFile" />
           <input onclick="loading()" type="submit" value="Generate" />
