--- a/Flask/templates/keypoints.html
+++ b/Flask/templates/keypoints.html
@@ -10,6 +10,7 @@
 <body>
     <div class="title"><h4>AI-Powered Note Maker</h4></div>
     <h1>Key Points</h1>
+    <h2>{{headline}}</h2>
     
     <div class="results">
         <ol>
