--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -41,6 +41,11 @@
           <input  onclick="loading()" type="submit" value="Generate" />
         </form>
       </div>
+      <div class="or">
+        <div class="hr"> </div>
+        <h2>OR</h2>
+        <div class="hr"> </div>
+    </div>
       <div class="audioinput">
         <p>Record at real time and summarize:</p>
         <p>
